# hummer

./: .gitignore  .postcssrc  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  prettier.config.cjs  tailwind.config.cjs  tsconfig.json
certs/: localhost.cert  localhost.key
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/styles/: tailwind.css
